tests/baselines/reference/importNonStringLiteral.errors.txt
==== tests/cases/conformance/externalModules/importNonStringLiteral.ts (2 errors) ====
    var x = "filename";
    import foo = require(x); // invalid
                         ~
!!! error TS1141: String literal expected.
                          ~
!!! error TS1005: ';' expected.
    